# ClaimeAI

./: .env.example  .gitignore  INSTALLATION.md  README.md  ROADMAP.md  langgraph.json  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: deploy.yml
apps/agent/: .env.example  README.md  docker-compose.yml  fly.toml  langgraph.json  pyproject.toml
apps/agent/claim_extractor/: README.md
apps/agent/claim_extractor/nodes/: decomposition.py  disambiguation.py  selection.py  sentence_splitter.py
apps/agent/claim_verifier/: README.md  prompts.py  schemas.py
apps/agent/claim_verifier/config/: nodes.py
apps/agent/claim_verifier/nodes/: evaluate_evidence.py  retrieve_evidence.py
apps/agent/db/: init-db.sql  init.sql
apps/agent/fact_checker/: README.md  agent.py
apps/agent/fact_checker/nodes/: generate_report.py
apps/agent/utils/: __init__.py  checkpointer.py  models.py  settings.py
apps/extension/: content.js  package.json
apps/web/: README.md  drizzle.config.ts  package.json  tsconfig.tsbuildinfo
claim_extractor/: README.md  agent.py  schemas.py
claim_extractor/nodes/: decomposition.py  disambiguation.py  selection.py  validation.py
claim_extractor/utils/: __init__.py  llm.py
claim_verifier/: README.md  schemas.py
claim_verifier/config/: nodes.py
claim_verifier/llm/: config.py
claim_verifier/nodes/: evaluate_evidence.py  generate_search_queries.py  retrieve_evidence.py
client/: package.json
fact_checker/: README.md  agent.py
scripts/: create_run.py  run_fact_checker.py
utils/: __init__.py
(+93 files in other folders)
