[project]
authors = [
  {name = "Bharath Lakshman Kumar", email = "bharathxxd@gmail.com"},
]
dependencies = [
  "langchain (>=0.3.25,<0.4.0)",
  "langchain-openai (>=0.3.16,<0.4.0)",
  "nltk (>=3.9.1,<4.0.0)",
  "langgraph (>=0.4.3,<0.5.0)",
  "python-dotenv (>=1.1.0,<2.0.0)",
  "langgraph-sdk (>=0.1.69,<0.2.0)",
  "langchain-exa (>=0.3.0,<0.4.0)",
  "transformers (>=4.53.1,<5.0.0)",
  "torch (>=2.7.1,<3.0.0)",
  "numpy (<2)",
  "scipy (>=1.16.0,<2.0.0)",
  "huggingface-hub (>=0.33.2,<0.34.0)",
  "sentence-transformers (>=5.0.0,<6.0.0)",
  "scikit-learn (>=1.7.0,<2.0.0)",
  "langchain-core (>=0.3.68,<0.4.0)",
  "pydantic-settings (>=2.10.1,<3.0.0)",
  "langgraph-checkpoint-postgres (>=2.0.22,<3.0.0)",
]
description = "A fact-checking agent that extracts claims from a given text and validates them as complete, declarative sentences."
name = "fact-checker"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
create-run = "scripts.create_run:main"
